          that flex/bison have already freed)

23/11/2009 JK (only branch wbb-tweaks)
        - If low-pass filter is active and smearing matrix is explicitly
          given, the effect of the filter is now compensated
        - Pre-compute part of rates to speed things up by O(10%)

27/11/2009 JK
        - Fixed bug in BB100/BB100_flux_Ne.dat file: Column for \bar{\nu}_e
          was not zero.

10/01/2010 JK (only branch wbb-tweaks)
        - Implemented experimental simulated annealing algorithm
          (is much too slow to be considered seriously)
        - Modified order of some operations in glb_filtered_probability_matrix_cd
          and glb_set_new_rates to improve speed a little
        - Implemented function glbOptimizeSmearingMatrixInExperiment to
          remove close-to-zero entries from smearing matrices to improve speed

03/02/2010 JK (only branch wbb-tweaks)
        - Introduced function glbGetAEDLVariable

30/03/2010 JK (only branch wbb-tweaks)
        - Fixed bug in Lexer leading to wrong line numbers in error messages
        - Fixed bug in Lexer leading to errors if "//" comments appear
          inside other contexts

13 Apr 2010 JK
        - Fixed bug in glbGetFilterInExperiment -- function returned
          only integer values

22 Apr 2010 JK
        - Regenerated all autoconf/automake, libtool, gnulib stuff using
          the latest versions of these packages:
            aclocal 1.11.1
            automake 1.11.1
            autoconf 2.65
            autoheader 2.65
            libtool 2.65
            gnulib-tool 0.0.3828-6d126
          The procedure is
            - Remove m4/ and lib/ directories
            - Run gnulib-tool --import obstack argp mkstemp
              (to get copy required modules from GNU library to our build tree)
            - Get rpm.m4, swig.m4, swig_perl.m4, gsl.m4 macros and copy
              to m4/
            - Run aclocal -I m4, autoconf, automake, autoheader
              (in this order)
